Stat block and related content modifications for landing page

--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
@@ -1,7 +1,8 @@
 {% load wagtailimages_tags %}
 {% image stats_block.background_image max-1000x500 as bg_image %}
-<section class="section section--stat-block section--opposite-notch bg bg--stat-block bg--dark" data-stat-block style="--stat-block-bg-image: url('{{ bg_image.url }}')">
-    <div class="section__notch section__notch--transparent section__notch--opposite">
+<section class="section section--stat-block {% if stats_block.default_notch_override %}section--stat-block-notch-override{% else %}section--opposite-notch{% endif %} bg bg--stat-block bg--dark" data-stat-block style="--stat-block-bg-image: url('{{ bg_image.url }}')">
+    
+    <div class="section__notch {% if stats_block.default_notch_override %}{% else %}section__notch--transparent section__notch--opposite{% endif %}">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
     <div class="section__row stat-block {% if stats_block.statistics|length > 3 %}stat-block--large{% endif %}">
@@ -44,14 +45,16 @@
 
     {% if stats_block.link %}
         <div class="stat-block__footer grid">
-            <a href="{{ stats_block.link }}" class="stat-block__footer-link link link--tertiary link--link">
-                {% if stats_block.action %}<span class="link__label">{{ stats_block.action }}</span>{% endif %}
-                <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
-            </a>
+            <div class="stat-block__footer-action">
+                <a href="{{ stats_block.link }}" class="stat-block__footer-link link link--tertiary link--link">
+                    {% if stats_block.action %}<span class="link__label">{{ stats_block.action }}</span>{% endif %}
+                    <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+                </a>
+            </div>
         </div>
     {% endif %}
 
-    <div class="section__notch">
+    <div class="section__notch {% if stats_block.default_notch_override %}section__notch--opposite{% endif %}">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
 </section>
