--- a/rca/static_src/sass/components/_stat-block.scss
+++ b/rca/static_src/sass/components/_stat-block.scss
@@ -53,7 +53,7 @@
         }
     }
 
-    &__footer-link {
+    &__footer-action {
         grid-column: 1 / span 1;
         margin-bottom: ($gutter * 2);
 
