Adding three landing page variations

--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -29,7 +29,7 @@
                         <p class="related-content__title body body--one">
                             <a
                                 href="{% pageurl related_item %}"
-                                class="link link--tertiary"
+                                class="related-content__link link link--tertiary"
                                 data-related-title
                                 data-target-image="{{ forloop.counter }}"
                                 data-parent-group={{ forloop.parentloop.counter }}
