--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.html
@@ -20,7 +20,7 @@
                             <p class="related-content__title body body--one">
                                 <a
                                     href="#"
-                                    class="link link--tertiary"
+                                    class="related-content__link link link--tertiary"
                                     data-related-title
                                     data-target-image="{{ forloop.counter }}"
                                     data-parent-group={{ forloop.parentloop.counter }}
