Fixing incorrect class name

--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.html
@@ -127,7 +127,7 @@
             {% endif %}
 
             {% if page.related_courses %}
-                <section class="section bg bg--white">
+                <section class="section bg bg--light">
                     <div class="section__row section__row--first section__row--last">
                         {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=page.related_courses title=page.related_courses_title %}
                     </div>
