Introduction refactor and contact notch

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -12,7 +12,7 @@
                 {% include "patterns/molecules/key-details/key-details.html" with course_type="programme" %}
             </div>
             <div class="programme-overview__body">
-                <p class="introduction" property="schema:description">
+                <p class="introduction heading heading--five" property="schema:description">
                     {{ page.programme_description_subtitle }}
                 <p>
                 {% if page.programme_image %}
