--- a/rca/static_src/sass/components/_title-area.scss
+++ b/rca/static_src/sass/components/_title-area.scss
@@ -159,6 +159,19 @@
         }
     }
 
+    &--landing-page {
+        @include media-query(large) {
+            padding-bottom: ($gutter * 2);
+        }
+
+        #{$root}__heading {
+            @include media-query(large) {
+                max-width: 66.666%;
+                padding-right: ($gutter * 2);
+            }
+        }
+    }
+
     .bg--dark & {
         #{$root}__sub-heading {
             color: $color--meta-darkbg;
